<resources>
    <string name="app_name">MaterialDesignComponents</string>

    //for DialogActivity
    <string name="neutral">NEUTRAL</string>
    <string name="positive">ACCEPT</string>
    <string name="negative">DECLINE</string>
    <string name="alert_dialog">Alert Dialog</string>
    <string name="simple_dialog">Simple Dialog</string>
    <string name="dialogs">Dialogs</string>
    <string name="choose_item">Choose your item please</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="confirmationDialog">Confirmation Dialog</string>
    <string name="multipleChoiceConfirmationDialog">Multiple Choice Confirmation Dialog</string>
    <string name="fab_regular">FAB Regular</string>
    <string name="floating_action_buttons_fab">Floating Action Buttons (FAB)</string>
    <string name="regular_fab">Regular FAB</string>
    <string name="fab_mini">FAB Mini</string>
    <string name="mini_fab">Mini FAB</string>
    <string name="label">Label</string>
    <string name="extended_fab">Extended FAB</string>
    <string name="animated_regular_fab">Animated Regular FAB</string>
    <string name="fab_animated_regular">Animated Regular FAB</string>


</resources>