<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FabActivity">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/coordinatorLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_Fab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="72dp"
            android:gravity="center_horizontal"
            android:text="@string/floating_action_buttons_fab"
            android:textColor="@color/design_default_color_primary_dark"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_regularFab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:text="@string/regular_fab"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_miniFab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:text="@string/mini_fab"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_extendedFab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:text="@string/extended_fab"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_animatedRegularFab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:text="@string/animated_regular_fab"
            android:textSize="20sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="32dp"
            android:contentDescription="@string/fab_regular"
            android:src="@drawable/ic_outline_add_24"
            android:visibility="invisible"
            app:backgroundTint="@color/purple_700"
            app:fabSize="normal">

        </com.google.android.material.floatingactionbutton.FloatingActionButton>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_mini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="32dp"
            android:contentDescription="@string/fab_mini"
            android:src="@drawable/ic_outline_add_24"
            android:visibility="invisible"
            app:backgroundTint="@color/purple_700"
            app:fabSize="mini">

        </com.google.android.material.floatingactionbutton.FloatingActionButton>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fab_extended"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="32dp"
            android:text="@string/label"
            android:visibility="invisible"
            app:icon="@drawable/ic_outline_add_24">

        </com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_animatedRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="32dp"
            android:contentDescription="@string/fab_animated_regular"
            android:src="@drawable/ic_outline_add_24"
            android:visibility="invisible"
            app:backgroundTint="@color/purple_200"
            app:fabSize="normal">

        </com.google.android.material.floatingactionbutton.FloatingActionButton>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</androidx.constraintlayout.widget.ConstraintLayout>